--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         body {
             font-family: 'Tajawal', sans-serif;
-            background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+            background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
             height: 100vh;
             margin: 0;
             display: flex;
@@ -18,23 +18,24 @@
             box-sizing: border-box;
         }
         .calculator {
-            background-color: white;
-            padding: 2rem;
-            border-radius: 15px;
-            box-shadow: 0 10px 20px rgba(0,0,0,0.1);
+            background: rgba(255, 255, 255, 0.9);
+            backdrop-filter: blur(15px);
+            padding: 2.5rem;
+            border-radius: 20px;
+            box-shadow: 0 15px 35px rgba(0, 0, 0, 0.3);
             width: 100%;
-            max-width: 400px;
+            max-width: 450px;
             text-align: center;
             transition: transform 0.3s, box-shadow 0.3s;
         }
         .calculator:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 15px 25px rgba(0,0,0,0.2);
+            transform: translateY(-10px);
+            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.5);
         }
         h2 {
-            color: #2c3e50;
+            color: #1c2833;
             margin-bottom: 1.5rem;
-            font-size: 1.8rem;
+            font-size: 2rem;
         }
         .input-group {
             margin-bottom: 1.5rem;
@@ -45,37 +46,36 @@
             margin-bottom: 0.5rem;
             color: #34495e;
             font-weight: bold;
-            font-size: 1rem;
+            font-size: 1.1rem;
         }
         select, input {
             width: 100%;
-            padding: 10px;
-            border: 1px solid #bdc3c7;
-            border-radius: 5px;
-            font-size: 1rem;
-            transition: border-color 0.3s;
-            background-color: white;
+            padding: 12px;
+            border: 2px solid #ecf0f1;
+            border-radius: 8px;
+            font-size: 1.1rem;
+            transition: border-color 0.3s, box-shadow 0.3s;
+            background-color: #fff;
         }
         select:focus, input:focus {
             outline: none;
             border-color: #3498db;
-        }
-        select {
-            cursor: pointer;
+            box-shadow: 0 0 10px rgba(52, 152, 219, 0.5);
         }
         .result-box {
-            background-color: #ecf0f1;
-            padding: 1.5rem;
-            border-radius: 5px;
-            margin-top: 1.5rem;
+            background: linear-gradient(135deg, #e3f2fd, #bbdefb);
+            padding: 2rem;
+            border-radius: 10px;
+            margin-top: 2rem;
             transition: background-color 0.3s;
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
         }
         .result-box:hover {
-            background-color: #d0d7de;
+            background-color: #90caf9;
         }
         #result {
             margin: 0;
-            font-size: 1.3rem;
+            font-size: 1.5rem;
             font-weight: bold;
             color: #2c3e50;
             line-height: 1.8;
@@ -88,15 +88,34 @@
         input[type=number] {
             -moz-appearance: textfield;
         }
+        button {
+            width: 100%;
+            padding: 12px;
+            margin-top: 1rem;
+            background-color: #3498db;
+            color: white;
+            font-size: 1.2rem;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            transition: background-color 0.3s, transform 0.2s;
+        }
+        button:hover {
+            background-color: #2980b9;
+            transform: scale(1.05);
+        }
+        button:active {
+            transform: scale(0.98);
+        }
         @media (max-width: 600px) {
             .calculator {
-                padding: 1.5rem;
+                padding: 2rem;
             }
             h2 {
-                font-size: 1.5rem;
+                font-size: 1.6rem;
             }
             #result {
-                font-size: 1.1rem;
+                font-size: 1.2rem;
             }
         }
     </style>
@@ -119,20 +138,9 @@
             <label for="months">عدد الأشهر:</label>
             <select id="months">
                 <option value="3">3 أشهر</option>
-                <option value="4">4 أشهر</option>
-                <option value="5">5 أشهر</option>
                 <option value="6">6 أشهر</option>
-                <option value="7">7 أشهر</option>
-                <option value="8">8 أشهر</option>
                 <option value="9">9 أشهر</option>
-                <option value="10">10 أشهر</option>
-                <option value="11">11 شهر</option>
                 <option value="12">12 شهر</option>
-                <option value="13">13 شهر</option>
-                <option value="14">14 شهر</option>
-                <option value="15">15 شهر</option>
-                <option value="16">16 شهر</option>
-                <option value="17">17 شهر</option>
                 <option value="18">18 شهر</option>
             </select>
         </div>
@@ -140,6 +148,7 @@
             <label for="downpayment">التسبيق (اختياري):</label>
             <input type="number" id="downpayment" placeholder="أدخل مبلغ التسبيق" min="0" value="0">
         </div>
+        <button onclick="calculate()">احسب القسط</button>
         <div class="result-box">
             <p id="result">النتيجة ستظهر هنا</p>
         </div>
@@ -148,41 +157,22 @@
     <script>
         const PRICE_PER_PERSON = 168000;
         const RATES = {
-            1: 0.17, 2: 0.17, 3: 0.2, 4: 0.22, 5: 0.24,
-            6: 0.27, 7: 0.3, 8: 0.34, 9: 0.38, 10: 0.42,
-            11: 0.46, 12: 0.5, 13: 0.52, 14: 0.57, 15: 0.62,
-            16: 0.67, 17: 0.72, 18: 0.77
+            3: 0.2, 6: 0.27, 9: 0.38, 12: 0.5, 18: 0.77
         };
 
-        /**
-         * تقريب الرقم إلى أقرب 100 للأعلى
-         * @param {number} number
-         * @returns {number}
-         */
         function roundUpToNearest100(number) {
             return Math.ceil(number / 100) * 100;
         }
 
-        /**
-         * تنسيق الرقم لعرضه بشكل مناسب
-         * @param {number} number
-         * @returns {string}
-         */
         function formatNumber(number) {
-            return number.toLocaleString('en-US', {
-                useGrouping: true,
-                maximumFractionDigits: 0
-            });
+            return number.toLocaleString('en-US', { useGrouping: true, maximumFractionDigits: 0 });
         }
 
-        /**
-         * حساب الأقساط وعرضها
-         */
         function calculate() {
             const persons = parseInt(document.getElementById('persons').value);
             const months = parseInt(document.getElementById('months').value);
             const downpayment = parseFloat(document.getElementById('downpayment').value) || 0;
-            
+
             const totalPrice = persons * PRICE_PER_PERSON;
             if (downpayment > totalPrice) {
                 document.getElementById('result').innerHTML = 'مبلغ التسبيق أكبر من السعر الإجمالي';
@@ -190,33 +180,14 @@
             }
 
             const remainingAmount = totalPrice - downpayment;
-            let monthlyRate = RATES[months] || 0.17;
-
-            if (remainingAmount >= 200000) {
-                monthlyRate *= 0.8;
-            } else if (remainingAmount >= 100000) {
-                monthlyRate *= 0.9;
-            }
-
+            const monthlyRate = RATES[months];
             const totalWithProfit = remainingAmount * (1 + monthlyRate);
-            const regularMonthlyPayment = roundUpToNearest100(Math.floor(totalWithProfit / months));
-            const lastMonthPayment = roundUpToNearest100(totalWithProfit - (regularMonthlyPayment * (months - 1)));
+            const monthlyPayment = roundUpToNearest100(totalWithProfit / months);
 
             document.getElementById('result').innerHTML = `
-                القسط الشهري: ${formatNumber(regularMonthlyPayment)}  <br>
-                 
+                القسط الشهري: ${formatNumber(monthlyPayment)} دينار
             `;
         }
-
-        // استخدام Event Delegation لتحسين الأداء
-        document.querySelector('.calculator').addEventListener('change', function(event) {
-            if (event.target.matches('select, input')) {
-                calculate();
-            }
-        });
-
-        // تشغيل الحاسبة عند تحميل الصفحة
-        window.addEventListener('load', calculate);
     </script>
 </body>
 </html>
