--- a/index.html
+++ b/index.html
@@ -6,26 +6,9 @@
     <title>حاسبة تقسيط العمرة</title>
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap" rel="stylesheet">
     <style>
-        :root {
-            --primary-color: lch(53% 105 40);
-            --secondary-color: lab(70% 20 30);
-            --background-color: hwb(220 90% 0%);
-            --text-color: lch(30% 0 0);
-            --shadow-color: rgba(0, 0, 0, 0.1);
-            --border-radius: 15px;
-            --transition-duration: 0.3s;
-        }
-
-        @supports (display: subgrid) {
-            .calculator {
-                display: grid;
-                grid-template-columns: subgrid;
-            }
-        }
-
         body {
             font-family: 'Tajawal', sans-serif;
-            background: var(--background-color);
+            background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
             height: 100vh;
             margin: 0;
             display: flex;
@@ -33,93 +16,98 @@
             align-items: center;
             padding: 1rem;
             box-sizing: border-box;
-            color: var(--text-color);
+            overflow: hidden;
         }
-
         .calculator {
-            background-color: white;
+            background-color: rgba(255, 255, 255, 0.9);
             padding: 2rem;
-            border-radius: var(--border-radius);
-            box-shadow: 0 10px 20px var(--shadow-color);
+            border-radius: 15px;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.2);
             width: 100%;
             max-width: 400px;
             text-align: center;
-            transition: transform var(--transition-duration), box-shadow var(--transition-duration);
+            transition: all 0.5s ease;
+            animation: float 6s ease-in-out infinite;
         }
-
-        .calculator:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 15px 25px var(--shadow-color);
+        @keyframes float {
+            0% { transform: translatey(0px); }
+            50% { transform: translatey(-20px); }
+            100% { transform: translatey(0px); }
         }
-
         h2 {
-            color: var(--primary-color);
+            color: #2c3e50;
             margin-bottom: 1.5rem;
             font-size: 1.8rem;
         }
-
         .input-group {
             margin-bottom: 1.5rem;
             text-align: right;
         }
-
         label {
             display: block;
             margin-bottom: 0.5rem;
-            color: var(--secondary-color);
+            color: #34495e;
             font-weight: bold;
             font-size: 1rem;
         }
-
         select, input {
             width: 100%;
             padding: 10px;
-            border: 1px solid var(--secondary-color);
-            border-radius: calc(var(--border-radius) / 3);
+            border: 2px solid #bdc3c7;
+            border-radius: 5px;
             font-size: 1rem;
-            transition: border-color var(--transition-duration);
+            transition: all 0.3s ease;
             background-color: white;
         }
-
         select:focus, input:focus {
             outline: none;
-            border-color: var(--primary-color);
+            border-color: #3498db;
+            box-shadow: 0 0 10px rgba(52, 152, 219, 0.5);
         }
-
         select {
             cursor: pointer;
+            appearance: none;
+            background-image: url('data:image/svg+xml;utf8,<svg fill="%23333" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M7 10l5 5 5-5z"/><path d="M0 0h24v24H0z" fill="none"/></svg>');
+            background-repeat: no-repeat;
+            background-position-x: 2%;
+            background-position-y: 50%;
         }
-
         .result-box {
-            background-color: var(--background-color);
+            background-color: #ecf0f1;
             padding: 1.5rem;
-            border-radius: calc(var(--border-radius) / 3);
+            border-radius: 5px;
             margin-top: 1.5rem;
-            transition: background-color var(--transition-duration);
+            transition: all 0.3s ease;
         }
-
         .result-box:hover {
-            background-color: hwb(220 80% 10%);
+            background-color: #d0d7de;
+            transform: scale(1.02);
         }
-
         #result {
             margin: 0;
             font-size: 1.3rem;
             font-weight: bold;
-            color: var(--primary-color);
+            color: #2c3e50;
             line-height: 1.8;
         }
-
-        input::-webkit-outer-spin-button,
-        input::-webkit-inner-spin-button {
-            -webkit-appearance: none;
-            margin: 0;
+        .reset-button {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            background-color: #e74c3c;
+            color: white;
+            border: none;
+            padding: 15px;
+            border-radius: 50%;
+            cursor: pointer;
+            font-size: 1.2rem;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+            transition: all 0.3s ease;
         }
-
-        input[type=number] {
-            -moz-appearance: textfield;
+        .reset-button:hover {
+            background-color: #c0392b;
+            transform: scale(1.1);
         }
-
         @media (max-width: 600px) {
             .calculator {
                 padding: 1.5rem;
@@ -131,93 +119,88 @@
                 font-size: 1.1rem;
             }
         }
-
-        @container (max-width: 300px) {
-            .calculator {
-                padding: 1rem;
-            }
-            h2 {
-                font-size: 1.3rem;
-            }
+        .background-animation {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -1;
+            opacity: 0.5;
         }
-
-        @keyframes slideIn {
-            from {
-                transform: translateY(-20px);
-                opacity: 0;
-            }
-            to {
-                transform: translateY(0);
-                opacity: 1;
-            }
+        .background-animation span {
+            position: absolute;
+            width: 20px;
+            height: 20px;
+            background: #4CAF50;
+            animation: move 3s linear infinite;
+            border-radius: 50%;
         }
-
-        .animate-slide-in {
-            animation: slideIn 0.5s ease-out;
-        }
-
-        .calculator {
-            container-type: inline-size;
+        @keyframes move {
+            0% {
+                transform: translate(0, 0);
+            }
+            100% {
+                transform: translate(300px, 300px);
+            }
         }
     </style>
 </head>
 <body>
-    <calculator-component></calculator-component>
+    <div class="background-animation">
+        <span style="left: 10%; top: 20%;"></span>
+        <span style="left: 30%; top: 40%;"></span>
+        <span style="left: 50%; top: 60%;"></span>
+        <span style="left: 70%; top: 80%;"></span>
+        <span style="left: 90%; top: 10%;"></span>
+    </div>
 
-    <dialog id="resultDialog">
-        <h3>نتيجة الحساب</h3>
-        <p id="dialogResult"></p>
-        <form method="dialog">
-            <button>إغلاق</button>
-        </form>
-    </dialog>
-
-    <template id="calculator-template">
-        <div class="calculator animate-slide-in">
-            <h2>حاسبة تقسيط العمرة</h2>
-            <div class="input-group">
-                <label for="persons">عدد الأشخاص:</label>
-                <select id="persons">
-                    <option value="1">شخص واحد</option>
-                    <option value="2">شخصين</option>
-                    <option value="3">3 أشخاص</option>
-                    <option value="4">4 أشخاص</option>
-                    <option value="5">5 أشخاص</option>
-                    <option value="6">6 أشخاص</option>
-                </select>
-            </div>
-            <div class="input-group">
-                <label for="months">عدد الأشهر:</label>
-                <select id="months">
-                    <option value="3">3 أشهر</option>
-                    <option value="4">4 أشهر</option>
-                    <option value="5">5 أشهر</option>
-                    <option value="6">6 أشهر</option>
-                    <option value="7">7 أشهر</option>
-                    <option value="8">8 أشهر</option>
-                    <option value="9">9 أشهر</option>
-                    <option value="10">10 أشهر</option>
-                    <option value="11">11 شهر</option>
-                    <option value="12">12 شهر</option>
-                    <option value="13">13 شهر</option>
-                    <option value="14">14 شهر</option>
-                    <option value="15">15 شهر</option>
-                    <option value="16">16 شهر</option>
-                    <option value="17">17 شهر</option>
-                    <option value="18">18 شهر</option>
-                </select>
-            </div>
-            <div class="input-group">
-                <label for="downpayment">التسبيق (اختياري):</label>
-                <input type="number" id="downpayment" placeholder="أدخل مبلغ التسبيق" min="0" value="0">
-            </div>
-            <div class="result-box">
-                <p id="result">النتيجة ستظهر هنا</p>
-            </div>
+    <div class="calculator">
+        <h2>حاسبة تقسيط العمرة</h2>
+        <div class="input-group">
+            <label for="persons">عدد الأشخاص:</label>
+            <select id="persons">
+                <option value="1">شخص واحد</option>
+                <option value="2">شخصين</option>
+                <option value="3">3 أشخاص</option>
+                <option value="4">4 أشخاص</option>
+                <option value="5">5 أشخاص</option>
+                <option value="6">6 أشخاص</option>
+            </select>
         </div>
-    </template>
+        <div class="input-group">
+            <label for="months">عدد الأشهر:</label>
+            <select id="months">
+                <option value="3">3 أشهر</option>
+                <option value="4">4 أشهر</option>
+                <option value="5">5 أشهر</option>
+                <option value="6">6 أشهر</option>
+                <option value="7">7 أشهر</option>
+                <option value="8">8 أشهر</option>
+                <option value="9">9 أشهر</option>
+                <option value="10">10 أشهر</option>
+                <option value="11">11 شهر</option>
+                <option value="12">12 شهر</option>
+                <option value="13">13 شهر</option>
+                <option value="14">14 شهر</option>
+                <option value="15">15 شهر</option>
+                <option value="16">16 شهر</option>
+                <option value="17">17 شهر</option>
+                <option value="18">18 شهر</option>
+            </select>
+        </div>
+        <div class="input-group">
+            <label for="downpayment">التسبيق (اختياري):</label>
+            <input type="number" id="downpayment" placeholder="أدخل مبلغ التسبيق" min="0" value="0">
+        </div>
+        <div class="result-box">
+            <p id="result">النتيجة ستظهر هنا</p>
+        </div>
+    </div>
 
-    <script type="module">
+    <button class="reset-button" onclick="resetCalculator()">↺</button>
+
+    <script>
         const PRICE_PER_PERSON = 168000;
         const RATES = {
             1: 0.17, 2: 0.17, 3: 0.2, 4: 0.22, 5: 0.24,
@@ -231,77 +214,57 @@
         }
 
         function formatNumber(number) {
-            return number.toLocaleString('ar-SA', {
+            return number.toLocaleString('en-US', {
                 useGrouping: true,
                 maximumFractionDigits: 0
             });
         }
 
-        class CalculatorComponent extends HTMLElement {
-            constructor() {
-                super();
-                this.attachShadow({ mode: 'open' });
+        function calculate() {
+            const persons = parseInt(document.getElementById('persons').value);
+            const months = parseInt(document.getElementById('months').value);
+            const downpayment = parseFloat(document.getElementById('downpayment').value) || 0;
+            
+            const totalPrice = persons * PRICE_PER_PERSON;
+            if (downpayment > totalPrice) {
+                document.getElementById('result').innerHTML = 'مبلغ التسبيق أكبر من السعر الإجمالي';
+                return;
             }
 
-            connectedCallback() {
-                const template = document.getElementById('calculator-template');
-                this.shadowRoot.appendChild(template.content.cloneNode(true));
+            const remainingAmount = totalPrice - downpayment;
+            let monthlyRate = RATES[months] || 0.17;
 
-                this.shadowRoot.querySelector('.calculator').addEventListener('change', (event) => {
-                    if (event.target.matches('select, input')) {
-                        this.calculate();
-                    }
-                });
-
-                this.calculate();
+            if (remainingAmount >= 200000) {
+                monthlyRate *= 0.8;
+            } else if (remainingAmount >= 100000) {
+                monthlyRate *= 0.9;
             }
 
-            calculate() {
-                const persons = parseInt(this.shadowRoot.getElementById('persons').value);
-                const months = parseInt(this.shadowRoot.getElementById('months').value);
-                const downpayment = parseFloat(this.shadowRoot.getElementById('downpayment').value) || 0;
-                
-                const totalPrice = persons * PRICE_PER_PERSON;
-                if (downpayment > totalPrice) {
-                    this.shadowRoot.getElementById('result').innerHTML = 'مبلغ التسبيق أكبر من السعر الإجمالي';
-                    return;
-                }
+            const totalWithProfit = remainingAmount * (1 + monthlyRate);
+            const regularMonthlyPayment = roundUpToNearest100(Math.floor(totalWithProfit / months));
+            const lastMonthPayment = roundUpToNearest100(totalWithProfit - (regularMonthlyPayment * (months - 1)));
 
-                const remainingAmount = totalPrice - downpayment;
-                let monthlyRate = RATES[months] || 0.17;
-
-                if (remainingAmount >= 200000) {
-                    monthlyRate *= 0.8;
-                } else if (remainingAmount >= 100000) {
-                    monthlyRate *= 0.9;
-                }
-
-                const totalWithProfit = remainingAmount * (1 + monthlyRate);
-                const regularMonthlyPayment = roundUpToNearest100(Math.floor(totalWithProfit / months));
-                const lastMonthPayment = roundUpToNearest100(totalWithProfit - (regularMonthlyPayment * (months - 1)));
-
-                const result = `
-                    القسط الشهري: ${formatNumber(regularMonthlyPayment)} ريال <br>
-                    القسط الأخير: ${formatNumber(lastMonthPayment)} ريال <br>
-                    إجمالي المبلغ: ${formatNumber(totalWithProfit + downpayment)} ريال
-                `;
-
-                this.shadowRoot.getElementById('result').innerHTML = result;
-                document.getElementById('dialogResult').innerHTML = result;
-                document.getElementById('resultDialog').showModal();
-            }
+            document.getElementById('result').innerHTML = `
+                القسط الشهري: ${formatNumber(regularMonthlyPayment)} <br>
+                القسط الأخير: ${formatNumber(lastMonthPayment)} <br>
+                إجمالي المبلغ: ${formatNumber(totalWithProfit + downpayment)}
+            `;
         }
 
-        customElements.define('calculator-component', CalculatorComponent);
+        function resetCalculator() {
+            document.getElementById('persons').value = '1';
+            document.getElementById('months').value = '3';
+            document.getElementById('downpayment').value = '0';
+            document.getElementById('result').innerHTML = 'النتيجة ستظهر هنا';
+        }
 
-        // WebAssembly integration example (assuming we have a simple WASM module for number formatting)
-        fetch('number_formatter.wasm')
-            .then(response => response.arrayBuffer())
-            .then(bytes => WebAssembly.instantiate(bytes))
-            .then(results => {
-                const formatNumberWasm = results.instance.exports.formatNumber;
-                // Use formatNumberWasm instead of the JavaScript formatNumber function if needed
-            });
+        document.querySelector('.calculator').addEventListener('change', function(event) {
+            if (event.target.matches('select, input')) {
+                calculate();
+            }
+        });
+
+        window.addEventListener('load', calculate);
     </script>
 </body>
 </html>
