--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                 <option value="10">10 أشهر</option>
                 <option value="11">11 شهر</option>
                 <option value="12">12 شهر</option>
-                <option value="13">13 شهر</option>
+                <option value="13" selected>13 شهر</option>
                 <option value="14">14 شهر</option>
                 <option value="15">15 شهر</option>
                 <option value="16">16 شهر</option>
