--- a/index.html
+++ b/index.html
@@ -12,79 +12,98 @@
             box-sizing: border-box;
         }
 
-       body {
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 2rem;
-}
+        body {
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            padding: 2rem;
+            font-family: 'Tajawal', sans-serif;
+            background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+            background-size: 400% 400%;
+            animation: gradient 15s ease infinite;
+        }
 
-.calculator {
-    width: 100%;
-    max-width: 600px;
-    margin: auto;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-}
+        @keyframes gradient {
+            0% {
+                background-position: 0% 50%;
+            }
+            50% {
+                background-position: 100% 50%;
+            }
+            100% {
+                background-position: 0% 50%;
+            }
+        }
 
-@media (min-width: 768px) {
-    .calculator {
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: space-between;
-    }
+        .calculator {
+            width: 100%;
+            max-width: 600px;
+            margin: auto;
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+            background: rgba(255, 255, 255, 0.1);
+            backdrop-filter: blur(10px);
+            border-radius: 20px;
+            padding: 2rem;
+            box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+        }
 
-    .input-group {
-        width: calc(50% - 0.5rem);
-    }
+        @media (min-width: 768px) {
+            .calculator {
+                flex-direction: row;
+                flex-wrap: wrap;
+                justify-content: space-between;
+            }
 
-    .result-box {
-        width: 100%;
-    }
-}
+            .input-group {
+                width: calc(50% - 0.5rem);
+            }
 
-@media (min-width: 1024px) {
-    .calculator {
-        max-width: 800px;
-    }
+            .result-box {
+                width: 100%;
+            }
+        }
 
-    .input-group {
-        width: calc(33.33% - 0.5rem);
-    }
-}
+        @media (min-width: 1024px) {
+            .calculator {
+                max-width: 800px;
+            }
 
-.input-group, .result-box {
-    flex-grow: 1;
-}
+            .input-group {
+                width: calc(33.33% - 0.5rem);
+            }
+        }
 
-.result-box {
-    margin-top: 1rem;
-}
+        .input-group, .result-box {
+            flex-grow: 1;
+        }
 
-/* تحسين قابلية القراءة على الشاشات الصغيرة */
-@media (max-width: 480px) {
-    body {
-        font-size: 14px;
-    }
+        .result-box {
+            margin-top: 1rem;
+        }
 
-    h2 {
-        font-size: 1.5rem;
-    }
+        @media (max-width: 480px) {
+            body {
+                font-size: 14px;
+            }
 
-    #result {
-        font-size: 1.2rem;
-    }
-}
+            h2 {
+                font-size: 1.5rem;
+            }
 
-/* تحسين استخدام المساحة على الشاشات الكبيرة */
-@media (min-width: 1200px) {
-    .calculator {
-        max-width: 1000px;
-    }
-}
+            #result {
+                font-size: 1.2rem;
+            }
+        }
+
+        @media (min-width: 1200px) {
+            .calculator {
+                max-width: 1000px;
+            }
+        }
 
         @keyframes float {
             0%, 100% { transform: translateY(0) rotateX(0); }
@@ -233,24 +252,6 @@
             transform: scale(1.1);
         }
 
-        @media (max-width: 600px) {
-            body {
-                padding: 1rem;
-            }
-            
-            .calculator {
-                padding: 1.5rem;
-            }
-
-            h2 {
-                font-size: 1.6rem;
-            }
-
-            #result {
-                font-size: 1.2rem;
-            }
-        }
-
         .input-group::after {
             content: '';
             position: absolute;
@@ -320,6 +321,18 @@
                 transform: translate(300px, 300px);
             }
         }
+
+        .visitor-count {
+            position: fixed;
+            top: 20px;
+            left: 20px;
+            background: rgba(255, 255, 255, 0.2);
+            padding: 10px 20px;
+            border-radius: 30px;
+            font-size: 0.9rem;
+            color: white;
+            backdrop-filter: blur(5px);
+        }
     </style>
 </head>
 <body>
@@ -329,6 +342,10 @@
         <span style="left: 50%; top: 60%;"></span>
         <span style="left: 70%; top: 80%;"></span>
         <span style="left: 90%; top: 10%;"></span>
+    </div>
+
+    <div class="visitor-count">
+        عدد الزيارات: <span id="visitorCount">0</span>
     </div>
 
     <div class="calculator">
@@ -383,7 +400,18 @@
 
     <button class="reset-button" onclick="resetCalculator()">↺</button>
 
-    <script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
+
+       <script>
+        // تهيئة Firebase
+        const firebaseConfig = {
+            // YOUR_FIREBASE_CONFIG
+            // يجب استبدال هذا بتكوين Firebase الخاص بك
+        };
+        firebase.initializeApp(firebaseConfig);
+
         const PRICE_PER_PERSON = {
             direct: 168000,
             indirect: 163000
@@ -442,7 +470,7 @@
                 void resultBox.offsetWidth; // Trigger reflow
                 resultBox.classList.add('pulse');
 
-                             document.getElementById('result').innerHTML = `
+                document.getElementById('result').innerHTML = `
                     نوع الرحلة: ${flightType === 'direct' ? 'مباشر' : 'غير مباشر'} <br>
                     القسط الشهري: ${formatNumber(regularMonthlyPayment)} <br>
                     إجمالي المبلغ: ${formatNumber(totalWithProfit + downpayment)}
@@ -457,6 +485,37 @@
             document.getElementById('downpayment').value = '0';
             document.getElementById('result').innerHTML = 'النتيجة ستظهر هنا';
             calculate();
+        }
+
+        // دالة لزيادة عدد الزيارات
+        function incrementVisitorCount() {
+            const visitorId = localStorage.getItem('visitorId');
+            if (!visitorId) {
+                const newVisitorId = Date.now().toString();
+                localStorage.setItem('visitorId', newVisitorId);
+                
+                const visitorCountRef = firebase.database().ref('visitorCount');
+                visitorCountRef.transaction((currentCount) => {
+                    return (currentCount || 0) + 1;
+                });
+            }
+        }
+
+        // دالة لعرض عدد الزيارات
+        function displayVisitorCount() {
+            const visitorCountRef = firebase.database().ref('visitorCount');
+            visitorCountRef.on('value', (snapshot) => {
+                const count = snapshot.val() || 0;
+                document.getElementById('visitorCount').textContent = count;
+            });
+        }
+
+        // تأثيرات حركية باستخدام GSAP
+        function initAnimations() {
+            gsap.from('.calculator', {duration: 1, opacity: 0, y: 50, ease: 'power3.out'});
+            gsap.from('.input-group', {duration: 0.8, opacity: 0, y: 20, stagger: 0.2, ease: 'power3.out'});
+            gsap.from('.result-box', {duration: 1, opacity: 0, scale: 0.9, ease: 'elastic.out(1, 0.5)', delay: 0.5});
+            gsap.from('.visitor-count', {duration: 1, opacity: 0, x: -50, ease: 'power3.out', delay: 1});
         }
 
         // Event Listeners
@@ -481,7 +540,12 @@
         // إضافة مستمع الحدث لعنصر نوع الرحلة
         document.getElementById('flightType').addEventListener('change', calculate);
 
-        window.addEventListener('load', calculate);
+        window.addEventListener('load', () => {
+            calculate();
+            incrementVisitorCount();
+            displayVisitorCount();
+            initAnimations();
+        });
     </script>
 </body>
 </html>
